fixed spacing on a few things, added some floating pictures to the content.

--- a/src/components/HomeBody/style.css
+++ b/src/components/HomeBody/style.css
@@ -2,7 +2,7 @@
     margin-bottom: 0px;
 }
 
-p {
+.body-p {
     font-size: 20px;
     margin: 30px;
 }
