--- a/src/components/HomeSlider/style.css
+++ b/src/components/HomeSlider/style.css
@@ -22,7 +22,15 @@
 }
 
 .slide-text {
+    font-size: 80px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 200px;
     margin: auto;
+    color: white;
+}
+
+.slide-caption {
+    font-size: 30px;
+    margin: 50px;
     color: white;
 }
